fix some layout issues

--- a/themes/default/static/css/less/components/contenteditable.less
+++ b/themes/default/static/css/less/components/contenteditable.less
@@ -25,7 +25,6 @@
   font-size: 28px;
   input {
     padding: 0 40px 0 0;
-    font-family: 'Questrial';
     font-weight: normal;
   }
 }
