--- a/themes/default/static/css/less/pages/forum.less
+++ b/themes/default/static/css/less/pages/forum.less
@@ -16,6 +16,7 @@
     .hide-question {
       display: block;
       margin-top: 10px;
+      width: 100px;
     }
     article {
       border-bottom: 1px solid fade(@brand-primary, 20%);
