--- a/themes/default/static/css/less/pages/home.less
+++ b/themes/default/static/css/less/pages/home.less
@@ -58,7 +58,7 @@
           left: 170px;
           top: 100px;
           p {
-            font-size: 3vw;
+            font-size: 41px;
           }
         }
       }
